--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,11 @@
 :root {
-    --text-color: #DBE4EF;
-    --card-front-color: #144480;
-    --card-back-color: #00F4BF;
+    --text-color: #ffc400;
+    --card-front-color: #f08726;
+    --card-back-color: #fff347;
 }
 
 body {
-    background: url('img/bg-desktop.webp');
+    background: url('img/images.jpeg');
     font-family: Bai Jamjuree;
 }
 
@@ -77,7 +77,7 @@ body {
 
 .cartao__conteudo__resposta {
     transform: rotateY(180deg);
-    background-color: rgba(0, 244, 191, 0.2);
+    background-color: rgb(255, 0, 0);
     border: 4px solid var(--card-back-color);
 }
 
